[metadata]
name = rover
version = 0.0.1
description = Just another Mars rover CLI.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = GPL-3.0-or-later
author = David Seaward
author_email = david@librem.one
url = https://example.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = find:
include_package_data = True
install_requires =
    click >=7.0, <8.0
    pytest >=5.0, <6.0

[options.entry_points]
console_scripts =
    rover = rover:cli
